fix the overlap style :)

--- a/client/src/style/DashBoard.css
+++ b/client/src/style/DashBoard.css
@@ -1,10 +1,10 @@
-
+/* 
         body {
             font-family: Arial, sans-serif;
             background-color: #f8f9fa;
             margin: 0;
             padding: 20px;
-        }
+        } */
         .listing-container {
             max-width: 800px;
             margin: auto;
@@ -12,8 +12,9 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0px 2px 10px rgba(0,0,0,0.1);
+            margin-top: 10px;
         }
-        .header {
+        .header_dash {
             font-size: 22px;
             font-weight: bold;
             margin-bottom: 10px;
